# archimvc

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
db/: database.sqlite
migrations/2023-10-10-000000_create_users/: up.sql
migrations/2025-04-25-214226_create_profiles/: up.sql
migrations/2025-04-25-214231_create_agents/: up.sql
migrations/2025-04-25-215930_create_agent_gains/: down.sql  up.sql
migrations/2025-04-25-225229_create_gains/: down.sql  up.sql
migrations/2025-04-25-225236_create_tirages/: down.sql  up.sql
migrations/2025-04-25-233739_create_jeux/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  schema.rs
src/controllers/: jeu_controller.rs  mod.rs  user_controller.rs
src/models/: agent.rs  agent_gain.rs  gain.rs  jeu.rs  mod.rs  profile.rs  sample.rs  tirage.rs  user.rs
src/routes/: mod.rs
src/seeders/: agent_gain_seeder.rs  agent_seeder.rs  jeu_seeder.rs  mod.rs  profile_seeder.rs  user_seeder.rs
